changed swiper, content

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/10.0.4/swiper-bundle.css"> -->
+    <link rel="stylesheet" href="/css/media.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
     <title>Ujjo</title>
 </head>
@@ -22,7 +22,7 @@
             <div class="header__img">
                 <div class="header__circle header__circle-left"></div>
                 <a class="header__logo" href="index.html">
-                    <img class="header__logo-img" src="/img/logo/logo.webp" alt="logo" loading="lazy">
+                    <img class="header__logo-img" src="/img/logo/logo.svg" alt="logo" loading="lazy">
                 </a>
                 <div class="header__circle header__circle-right"></div>
             </div>
@@ -156,7 +156,7 @@
                             <div class="products__desc">
                                 <p class="products__par">Snuggly for All Seasons</p>
                                 <h5 class="products__head">Logo beanie</h5>
-                                <div class="products__figure">
+                                <div class="products__figure _border">
                                     <img src="/img/products/cap.webp" alt="cap">
                                 </div>
                             </div>
@@ -168,7 +168,7 @@
                             <div class="products__desc">
                                 <p class="products__par">Sustainable carry-all</p>
                                 <h5 class="products__head">Stencil tote</h5>
-                                <div class="products__figure">
+                                <div class="products__figure _border">
                                     <img src="/img/products/eco.webp" alt="eco">
                                 </div>
                             </div>
@@ -180,7 +180,7 @@
                             <div class="products__desc">
                                 <p class="products__par">CLASSIC COMFY LOUNGEWEAR</p>
                                 <h5 class="products__head">SCRIPT SWEATSHIRT</h5>
-                                <div class="products__figure">
+                                <div class="products__figure _border">
                                     <img src="/img/products/sweatshirt.webp" alt="sweatshirt">
                                 </div>
                             </div>
@@ -192,7 +192,7 @@
                             <div class="products__desc">
                                 <p class="products__par">COCOA, MOLASSES, CINNAMON</p>
                                 <h5 class="products__head">SWEETER HOT SAUCE</h5>
-                                <div class="products__figure">
+                                <div class="products__figure _border">
                                     <img src="/img/products/bottle-hand.webp" alt="bottle">
                                 </div>
                             </div>
@@ -203,7 +203,7 @@
                             <div class="products__desc">
                                 <p class="products__par">SLEEK AND SUBTLE</p>
                                 <h5 class="products__head">TRAVEL MUG</h5>
-                                <div class="products__figure">
+                                <div class="products__figure _border">
                                     <img src="/img/products/original.webp" alt="thermos">
                                 </div>
                             </div>
@@ -224,56 +224,6 @@
                 </div>
             </div>
 
-            <!--             
-            <div class="products__swiper">
-                <div class="products__item">
-                    <div class="products__desc">
-                        <p class="products__par">tangy and tingly</p>
-                        <h5 class="products__head">LIGHT ROAST BLEND</h5>
-                        <div class="products__figure">
-                            <img src="/img/products/one-bottles.svg" alt="bottles">
-                        </div>
-                    </div>
-                </div>
-                <div class="products__item">
-                    <div class="products__desc">
-                        <p class="products__par">light & dark roast</p>
-                        <h5 class="products__head">UJJO SAMPLER PACK</h5>
-                        <div class="products__figure">
-                            <img src="/img/products/bottles.svg" alt="bottles">
-                        </div>
-                    </div>
-                </div>
-                <div class="products__item">
-                    <div class="products__desc">
-                        <p class="products__par">light & dark roast</p>
-                        <h5 class="products__head">DARK ROAST BLEND</h5>
-                        <div class="products__figure">
-                            <img src="/img/products/bottles-red.svg" alt="bottles">
-                        </div>
-                    </div>
-                </div>
-                <div class="products__item">
-                    <div class="products__desc">
-                        <p class="products__par">Snuggly for All Seasons</p>
-                        <h5 class="products__head">Logo beanie</h5>
-                        <div class="products__figure">
-                            <img src="/img/products/cap.webp" alt="cap">
-                        </div>
-                    </div>
-                </div>
-                <div class="products__item">
-                    <div class="products__desc">
-                        <p class="products__par">Sustainable carry-all</p>
-                        <h5 class="products__head">Stencil tote</h5>
-                        <div class="products__figure">
-                            <img src="/img/products/eco.webp" alt="eco">
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-             -->
         </section>
 
         <div class="content__text">
@@ -388,8 +338,6 @@
         </div>
     </footer>
 
-    <!-- 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/10.0.4/swiper-bundle.min.js" integrity="sha512-0N/5ZOjfsh3niel+5dRD40HQkFOWaxoVzqMVAHnmAO2DC3nY/TFB7OYTaPRAFJ571IRS/XRsXGb2XyiFLFeu1g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>  -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/swiper.js"></script>
     <script src="js/fire.js"></script>
