rename story -> about

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header>
         <nav class="header">
             <ul class="header__menu header__menu-left">
-                <li><a class="header__menu-link" href="#">shop</a></li>
-                <li><a class="header__menu-link" href="">wholesale</a></li>
+                <li><a class="header__menu-link" href="#shop">shop</a></li>
+                <li><a class="header__menu-link" href="#">wholesale</a></li>
                 <li><a class="header__menu-link" href="#">stockists</a></li>
             </ul>
             <div class="header__img">
@@ -27,8 +27,8 @@
                 <div class="header__circle header__circle-right"></div>
             </div>
             <ul class="header__menu header__menu-right">
-                <li><a class="header__menu-link" href="#">about</a></li>
-                <li><a class="header__menu-link" href="#">contacts</a></li>
+                <li><a class="header__menu-link" href="#about">about</a></li>
+                <li><a class="header__menu-link" href="#contacts">contacts</a></li>
                 <li><a class="header__menu-link" href="#">cart</a></li>
             </ul>
         </nav>
@@ -89,7 +89,7 @@
             </div>
         </section>
 
-        <section class="products">
+        <section class="products" id="shop">
             <div class="products__content">
                 <div class="products__img">
                     <img src="/img/products/scorpion.svg" alt="scorpion">
@@ -259,25 +259,25 @@
             <img class="illustration__img" src="/img/illustration/sauce-bg.svg" alt="sauce">
         </div>
 
-        <section class="story">
-            <div class="story__content">
-                <div class="story__name">
-                    <h3 class="story__title">the story behind the sauce</h3>
+        <section class="about" id="about">
+            <div class="about__content">
+                <div class="about__name">
+                    <h3 class="about__title">the story behind the sauce</h3>
                 </div>
 
-                <video class="sroty__video" src="/img/story/story.mp4" autoplay="" playsinline="" loop=""></video>
+                <video class="about__video" src="/img/about/story.mp4" autoplay="" playsinline="" loop=""></video>
             </div>
-            <div class="story__desc">
-                <p class="story__par">HELLO, I’M LAUREN AND AS A LIFELONG ADVENTUROUS EATER, I’VE TRIED A LOT OF
+            <div class="about__desc">
+                <p class="about__par">HELLO, I’M LAUREN AND AS A LIFELONG ADVENTUROUS EATER, I’VE TRIED A LOT OF
                     CRAZY
                     THINGS, BUT I NEVER THOUGHT HOT SAUCE IN COFFEE WAS A SANE OPTION UNTIL A FRIEND DARED ME TO TRY
                     IT.
                 </p>
-                <p class="story__par">AND IT SUCKED.</p>
-                <p class="story__par">BUT I WONDERED IF THERE WAS A WAY TO ADD SPICE TO MY COFFEE. WHEN THERE WAS NO
+                <p class="about__par">AND IT SUCKED.</p>
+                <p class="about__par">BUT I WONDERED IF THERE WAS A WAY TO ADD SPICE TO MY COFFEE. WHEN THERE WAS NO
                     EASY
                     SOLUTION, UJJO WAS BORN.</p>
-                <p class="story__par">UJJO (OOO-JOE): THE WORD FOR “FIRE” IN KONKANI, SPOKEN ON THE WEST COAST OF
+                <p class="about__par">UJJO (OOO-JOE): THE WORD FOR “FIRE” IN KONKANI, SPOKEN ON THE WEST COAST OF
                     INDIA,
                     IS AN HOMAGE AND A LOVE LETTER TO MY DAD, AN INDIAN IMMIGRANT WHO INSTILLED A FIRE IN MY PALATE
                     –
@@ -323,7 +323,7 @@
             </div>
         </div>
 
-        <div class="footer__contacts">
+        <div class="footer__contacts" id="contacts">
             <div class="footer__privacy">
                 <a class="footer__link" href="#">privacy</a>
             </div>
