added fraction swiper

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="header">
             <ul class="header__menu header__menu-left">
                 <li><a class="header__menu-link" href="#shop">shop</a></li>
-                <li><a class="header__menu-link" href="#">wholesale</a></li>
+                <li><a class="header__menu-link" href="https://www.faire.com/brand/b_whd3hnr378" target="_blank">wholesale</a></li>
                 <li><a class="header__menu-link" href="#">stockists</a></li>
             </ul>
             <div class="header__img">
@@ -79,7 +79,7 @@
                     <h1 class="content__head">THE FIRST HOT SAUCE </h1>
                     <span class="content__span">MADE FOR COFFEE</span>
                     <div class="content__btn">
-                        <a class="header__menu-link content__link" href="#">shop now</a>
+                        <a class="header__menu-link content__link" href="#shop">shop now</a>
                     </div>
                 </div>
                 <div class="content__right-img">
@@ -111,8 +111,8 @@
 
 
             <!-- Slider main container -->
-            <div class="swiper">
-                <div class="swiper-wrapper">
+            <div class="swiper image-slider">
+                <div class="swiper-wrapper ">
                     <!-- Slides -->
                     <div class="swiper-slide ">
                         <div class="products__item">
@@ -220,7 +220,7 @@
                     </div>
                     <div class="swiper-btn-next">
                         <img src="/img/products/arrowright.svg" alt="arrow">
-                    </div>
+                    </div> 
                 </div>
             </div>
 
