added media laptop l

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <h1 class="content__head">THE FIRST HOT SAUCE </h1>
                     <span class="content__span">MADE FOR COFFEE</span>
                     <div class="content__btn">
-                        <a class="header__menu-link content__link" href="#shop">shop now</a>
+                        <a class=" content__link" href="#shop">shop now</a>
                     </div>
                 </div>
                 <div class="content__right-img">
@@ -115,7 +115,7 @@
                 <div class="swiper-wrapper ">
                     <!-- Slides -->
                     <div class="swiper-slide ">
-                        <div class="products__item">
+                        <a href="https://www.google.com/" class="products__item">
                             <div class="products__desc">
                                 <p class="products__par">tangy and tingly</p>
                                 <h5 class="products__head">LIGHT ROAST BLEND</h5>
@@ -123,8 +123,7 @@
                                     <img src="/img/products/one-bottles.svg" alt="bottles">
                                 </div>
                             </div>
-                        </div>
-
+                        </a>
                     </div>
 
                     <div class="swiper-slide">
