--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
                         <img src="/img/content/words.svg" alt="content word">
                     </div>
                 </div>
+                <div class="content__desc-mobile">
+                    <h1 class="content__head">THE FIRST HOT SAUCE </h1>
+                    <span class="content__span">MADE FOR COFFEE</span>
+                    <div class="content__btn">
+                        <a class=" content__link" href="#shop">shop now</a>
+                    </div>
+                </div>
                 <div class="content__text">
                     <div class="content__ticker">
                         <div class="content__item">
