--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
 <body>
 
     <header>
+        <div class="hamburger">
+            <span class="hamburger__line"></span>
+            <span class="hamburger__line"></span>
+            <span class="hamburger__line"></span>
+        </div>
         <nav class="header">
+          
             <ul class="header__menu header__menu-left">
                 <li><a class="header__menu-link" href="#shop">shop</a></li>
                 <li><a class="header__menu-link" href="https://www.faire.com/brand/b_whd3hnr378" target="_blank">wholesale</a></li>
@@ -31,6 +37,7 @@
                 <li><a class="header__menu-link" href="#contacts">contacts</a></li>
                 <li><a class="header__menu-link" href="#">cart</a></li>
             </ul>
+         
         </nav>
     </header>
 
@@ -346,6 +353,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/swiper.js"></script>
+    <script src="js/hamburger.js"></script>
     <script src="js/fire.js"></script>
 </body>
 
