--- a/index.html
+++ b/index.html
@@ -13,16 +13,32 @@
 <body>
 
     <header>
-        <div class="hamburger">
-            <span class="hamburger__line"></span>
-            <span class="hamburger__line"></span>
-            <span class="hamburger__line"></span>
+        <div class="mobile">
+            <div class="hamburger">
+                <span class="hamburger__line"></span>
+                <span class="hamburger__line"></span>
+                <span class="hamburger__line"></span>
+            </div>
+
+            <div class="mobile__box">
+                <ul class="mobile-menu">
+                    <li><a class="header__menu-link" href="#shop">shop</a></li>
+                    <li><a class="header__menu-link" href="https://www.faire.com/brand/b_whd3hnr378"
+                            target="_blank">wholesale</a></li>
+                    <li><a class="header__menu-link" href="#">stockists</a></li>
+                    <li><a class="header__menu-link" href="#about">about</a></li>
+                    <li><a class="header__menu-link" href="#contacts">contacts</a></li>
+                    <li><a class="header__menu-link" href="#">cart</a></li>
+                    </ul< /div>
+            </div>
         </div>
+
         <nav class="header">
-          
+
             <ul class="header__menu header__menu-left">
                 <li><a class="header__menu-link" href="#shop">shop</a></li>
-                <li><a class="header__menu-link" href="https://www.faire.com/brand/b_whd3hnr378" target="_blank">wholesale</a></li>
+                <li><a class="header__menu-link" href="https://www.faire.com/brand/b_whd3hnr378"
+                        target="_blank">wholesale</a></li>
                 <li><a class="header__menu-link" href="#">stockists</a></li>
             </ul>
             <div class="header__img">
@@ -37,7 +53,7 @@
                 <li><a class="header__menu-link" href="#contacts">contacts</a></li>
                 <li><a class="header__menu-link" href="#">cart</a></li>
             </ul>
-         
+
         </nav>
     </header>
 
@@ -233,7 +249,7 @@
                     </div>
                     <div class="swiper-btn-next">
                         <img src="/img/products/arrowright.svg" alt="arrow">
-                    </div> 
+                    </div>
                 </div>
             </div>
 
