--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 </head>
 
 <body>
+    <div class="loader-wrapper">
+        <div class="loader">
+        </div>
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
+    </div>
 
     <header>
         <div class="mobile">
@@ -29,7 +35,7 @@
                     <li><a class="header__menu-link" href="#about">about</a></li>
                     <li><a class="header__menu-link" href="#contacts">contacts</a></li>
                     <li><a class="header__menu-link" href="#">cart</a></li>
-                    </ul< /div>
+                </ul>
             </div>
         </div>
 
@@ -369,6 +375,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/swiper.js"></script>
+    <script src="js/loader.js"></script>
     <script src="js/hamburger.js"></script>
     <script src="js/fire.js"></script>
 </body>
