changed folder image

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="content__main">
                 <div class="content__words">
                     <div class="content__img">
-                        <img src="/img/content/words.svg" alt="content word">
+                        <img src="img/content/words.svg" alt="content word">
                     </div>
                 </div>
                 <div class="content__desc-mobile">
@@ -90,7 +90,7 @@
                     <div class="content__ticker">
                         <div class="content__item">
                             <p class="content__par">put some fire in your belly</p>
-                            <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                            <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                         </div>
                         <div class="content__item">
                             <p class="content__par">put some fire in your belly</p>
@@ -98,15 +98,15 @@
                         </div>
                         <div class="content__item">
                             <p class="content__par">put some fire in your belly</p>
-                            <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                            <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                         </div>
                         <div class="content__item">
                             <p class="content__par">put some fire in your belly</p>
-                            <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                            <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                         </div>
                         <div class="content__item">
                             <p class="content__par">put some fire in your belly</p>
-                            <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                            <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                         </div>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                     </div>
                 </div>
                 <div class="content__right-img">
-                    <img src="/img/content/sauce-3.webp" alt="sauce">
+                    <img src="img/content/sauce-3.webp" alt="sauce">
                 </div>
 
             </div>
@@ -136,13 +136,13 @@
         <section class="products" id="shop">
             <div class="products__content">
                 <div class="products__img">
-                    <img src="/img/products/scorpion.svg" alt="scorpion">
+                    <img src="img/products/scorpion.svg" alt="scorpion">
                 </div>
                 <div>
                     <h4 class="products__title">THROW SOME LAVA IN YOUR JAVA</h4>
                 </div>
                 <div class="products__img">
-                    <img src="/img/products/scorpion-right.svg" alt="scorpion">
+                    <img src="img/products/scorpion-right.svg" alt="scorpion">
                 </div>
             </div>
             <!-- <div id="buttons-container">
@@ -164,7 +164,7 @@
                                 <p class="products__par">tangy and tingly</p>
                                 <h5 class="products__head">LIGHT ROAST BLEND</h5>
                                 <div class="products__figure">
-                                    <img src="/img/products/one-bottles.svg" alt="bottles">
+                                    <img src="img/products/one-bottles.svg" alt="bottles">
                                 </div>
                             </div>
                         </a>
@@ -176,7 +176,7 @@
                                 <p class="products__par">light & dark roast</p>
                                 <h5 class="products__head">UJJO SAMPLER PACK</h5>
                                 <div class="products__figure">
-                                    <img src="/img/products/bottles.svg" alt="bottles">
+                                    <img src="img/products/bottles.svg" alt="bottles">
                                 </div>
                             </div>
                         </div>
@@ -200,7 +200,7 @@
                                 <p class="products__par">Snuggly for All Seasons</p>
                                 <h5 class="products__head">Logo beanie</h5>
                                 <div class="products__figure _border">
-                                    <img src="/img/products/cap.webp" alt="cap">
+                                    <img src="img/products/cap.webp" alt="cap">
                                 </div>
                             </div>
                         </div>
@@ -212,7 +212,7 @@
                                 <p class="products__par">Sustainable carry-all</p>
                                 <h5 class="products__head">Stencil tote</h5>
                                 <div class="products__figure _border">
-                                    <img src="/img/products/eco.webp" alt="eco">
+                                    <img src="img/products/eco.webp" alt="eco">
                                 </div>
                             </div>
                         </div>
@@ -224,7 +224,7 @@
                                 <p class="products__par">CLASSIC COMFY LOUNGEWEAR</p>
                                 <h5 class="products__head">SCRIPT SWEATSHIRT</h5>
                                 <div class="products__figure _border">
-                                    <img src="/img/products/sweatshirt.webp" alt="sweatshirt">
+                                    <img src="img/products/sweatshirt.webp" alt="sweatshirt">
                                 </div>
                             </div>
                         </div>
@@ -236,7 +236,7 @@
                                 <p class="products__par">COCOA, MOLASSES, CINNAMON</p>
                                 <h5 class="products__head">SWEETER HOT SAUCE</h5>
                                 <div class="products__figure _border">
-                                    <img src="/img/products/bottle-hand.webp" alt="bottle">
+                                    <img src="img/products/bottle-hand.webp" alt="bottle">
                                 </div>
                             </div>
                         </div>
@@ -247,7 +247,7 @@
                                 <p class="products__par">SLEEK AND SUBTLE</p>
                                 <h5 class="products__head">TRAVEL MUG</h5>
                                 <div class="products__figure _border">
-                                    <img src="/img/products/original.webp" alt="thermos">
+                                    <img src="img/products/original.webp" alt="thermos">
                                 </div>
                             </div>
                         </div>
@@ -256,13 +256,13 @@
                 </div>
                 <div class="swiper__btn">
                     <div class="swiper-btn-prev">
-                        <img src="/img/products/arrowleft.svg" alt="arrow">
+                        <img src="img/products/arrowleft.svg" alt="arrow">
                     </div>
                     <div class="swiper__pag">
                         <div class="swiper-pagination"></div>
                     </div>
                     <div class="swiper-btn-next">
-                        <img src="/img/products/arrowright.svg" alt="arrow">
+                        <img src="img/products/arrowright.svg" alt="arrow">
                     </div>
                 </div>
             </div>
@@ -273,33 +273,33 @@
             <div class="content__ticker">
                 <div class="content__item">
                     <p class="content__par">put some fire in your belly</p>
-                    <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                    <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                     <p class="content__par">put some fire in your belly</p>
-                    <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                    <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                 </div>
                 <div class="content__item">
                     <p class="content__par">put some fire in your belly</p>
-                    <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                    <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                     <p class="content__par">put some fire in your belly</p>
-                    <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                    <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                 </div>
                 <div class="content__item">
                     <p class="content__par">put some fire in your belly</p>
-                    <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                    <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                     <p class="content__par">put some fire in your belly</p>
-                    <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                    <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                 </div>
                 <div class="content__item">
                     <p class="content__par">put some fire in your belly</p>
-                    <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                    <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                     <p class="content__par">put some fire in your belly</p>
-                    <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                    <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                 </div>
             </div>
         </div>
 
         <div class="illustration">
-            <img class="illustration__img" src="/img/illustration/sauce-bg.svg" alt="sauce">
+            <img class="illustration__img" src="img/illustration/sauce-bg.svg" alt="sauce">
         </div>
 
         <section class="about" id="about">
@@ -308,7 +308,7 @@
                     <h3 class="about__title">the story behind the sauce</h3>
                 </div>
 
-                <video class="about__video" src="/img/about/story.mp4" autoplay="" playsinline="" loop=""></video>
+                <video class="about__video" src="img/about/story.mp4" autoplay="" playsinline="" loop=""></video>
             </div>
             <div class="about__desc">
                 <p class="about__par">HELLO, I’M LAUREN AND AS A LIFELONG ADVENTUROUS EATER, I’VE TRIED A LOT OF
@@ -334,35 +334,35 @@
             <div class="content__ticker">
                 <div class="content__item">
                     <p class="content__par">download our media kit</p>
-                    <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                    <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                     <p class="content__par"> CONTACT FOR PARTNERSHIP OPPORTUNITIES</p>
-                    <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                    <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                 </div>
                 <div class="content__item">
                     <p class="content__par">download our media kit</p>
-                    <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                    <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                     <p class="content__par"> CONTACT FOR PARTNERSHIP OPPORTUNITIES</p>
-                    <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                    <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                 </div>
                 <div class="content__item">
                     <p class="content__par">download our media kit</p>
-                    <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                    <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                     <p class="content__par"> CONTACT FOR PARTNERSHIP OPPORTUNITIES</p>
-                    <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                    <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                 </div>
                 <div class="content__item">
                     <p class="content__par">download our media kit</p>
-                    <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                    <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                     <p class="content__par"> CONTACT FOR PARTNERSHIP OPPORTUNITIES</p>
-                    <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                    <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                 </div>
 
             </div>
         </div>
         <div class="footer__bg">
-            <img src="/img/footer/footer-flame.svg" alt="flame">
+            <img src="img/footer/footer-flame.svg" alt="flame">
             <div class="footer__word">
-                <img src="/img/content/words.svg" alt="words">
+                <img src="img/content/words.svg" alt="words">
             </div>
         </div>
 
@@ -374,9 +374,9 @@
                 <p class="footer__par">&#169; ujjo llc, columbus oh, 43219</p>
             </div>
             <div class="footer__icons">
-                <a href="#"><img class="footer__icons-img" src="/img/footer/contacts/facebook.svg" alt="facebook"></a>
-                <a href="#"><img class="footer__icons-img" src="/img/footer/contacts/instagram.svg" alt="instagram"></a>
-                <a href="#"><img class="footer__icons-img" src="/img/footer/contacts/tiktok.svg" alt="tiktok"></a>
+                <a href="#"><img class="footer__icons-img" src="img/footer/contacts/facebook.svg" alt="facebook"></a>
+                <a href="#"><img class="footer__icons-img" src="img/footer/contacts/instagram.svg" alt="instagram"></a>
+                <a href="#"><img class="footer__icons-img" src="img/footer/contacts/tiktok.svg" alt="tiktok"></a>
             </div>
         </div>
     </footer>
