--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 </head>
 
 <body>
-
     <div class="loader-wrapper">
         <div class="loader">
         </div>
@@ -36,12 +35,12 @@
 
             <div class="mobile__box">
                 <ul class="mobile-menu">
-                    <li><a class="header__menu-link" href="#shop">shop</a></li>
+                    <li><a class="header__menu-link" href="#.products">shop</a></li>
                     <li><a class="header__menu-link" href="https://www.faire.com/brand/b_whd3hnr378"
                             target="_blank">wholesale</a></li>
                     <li><a class="header__menu-link" href="#">stockists</a></li>
-                    <li><a class="header__menu-link" href="#about">about</a></li>
-                    <li><a class="header__menu-link" href="#contacts">contacts</a></li>
+                    <li><a class="header__menu-link" href="#.about">about</a></li>
+                    <li><a class="header__menu-link" href="#.contacts">contacts</a></li>
                     <li><a class="header__menu-link" href="#">cart</a></li>
                 </ul>
             </div>
@@ -50,7 +49,7 @@
         <nav class="header">
 
             <ul class="header__menu header__menu-left">
-                <li><a class="header__menu-link" href="#shop">shop</a></li>
+                <li><a class="header__menu-link" href="#.products">shop</a></li>
                 <li><a class="header__menu-link" href="https://www.faire.com/brand/b_whd3hnr378"
                         target="_blank">wholesale</a></li>
                 <li><a class="header__menu-link" href="#">stockists</a></li>
@@ -63,8 +62,8 @@
                 <div class="header__circle header__circle-right"></div>
             </div>
             <ul class="header__menu header__menu-right">
-                <li><a class="header__menu-link" href="#about">about</a></li>
-                <li><a class="header__menu-link" href="#contacts">contacts</a></li>
+                <li><a class="header__menu-link" href="#.about">about</a></li>
+                <li><a class="header__menu-link" href="#.contacts">contacts</a></li>
                 <li><a class="header__menu-link" href="#">cart</a></li>
             </ul>
 
@@ -83,7 +82,7 @@
                     <h1 class="content__head">THE FIRST HOT SAUCE </h1>
                     <span class="content__span">MADE FOR COFFEE</span>
                     <div class="content__btn">
-                        <a class=" content__link" href="#shop">shop now</a>
+                        <a class=" content__link" href="#.products">shop now</a>
                     </div>
                 </div>
                 <div class="content__text">
@@ -123,7 +122,7 @@
                     <h1 class="content__head">THE FIRST HOT SAUCE </h1>
                     <span class="content__span">MADE FOR COFFEE</span>
                     <div class="content__btn">
-                        <a class=" content__link" href="#shop">shop now</a>
+                        <a class=" content__link" href="#.products">shop now</a>
                     </div>
                 </div>
                 <div class="content__right-img">
@@ -133,7 +132,7 @@
             </div>
         </section>
 
-        <section class="products" id="shop">
+        <section class="products">
             <div class="products__content">
                 <div class="products__img">
                     <img src="img/products/scorpion.svg" alt="scorpion">
@@ -302,7 +301,7 @@
             <img class="illustration__img" src="img/illustration/sauce-bg.svg" alt="sauce">
         </div>
 
-        <section class="about" id="about">
+        <section class="about">
             <div class="about__content">
                 <div class="about__name">
                     <h3 class="about__title">the story behind the sauce</h3>
@@ -366,7 +365,7 @@
             </div>
         </div>
 
-        <div class="footer__contacts" id="contacts">
+        <div class="footer__contacts contacts">
             <div class="footer__privacy">
                 <a class="footer__link" href="#">privacy</a>
             </div>
