--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </div>
                         <div class="content__item">
                             <p class="content__par">put some fire in your belly</p>
-                            <img src="/img/content/pepper.svg" alt="pepper" class="content__icon">
+                            <img src="img/content/pepper.svg" alt="pepper" class="content__icon">
                         </div>
                         <div class="content__item">
                             <p class="content__par">put some fire in your belly</p>
