--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <div class="swiper-wrapper ">
                     <!-- Slides -->
                     <div class="swiper-slide ">
-                        <a href="https://www.google.com/" class="products__item">
+                        <a href="#" class="products__item">
                             <div class="products__desc">
                                 <p class="products__par">tangy and tingly</p>
                                 <h5 class="products__head">LIGHT ROAST BLEND</h5>
@@ -170,7 +170,7 @@
                     </div>
 
                     <div class="swiper-slide">
-                        <div class="products__item">
+                        <a href="#" class="products__item">
                             <div class="products__desc">
                                 <p class="products__par">light & dark roast</p>
                                 <h5 class="products__head">UJJO SAMPLER PACK</h5>
@@ -178,11 +178,11 @@
                                     <img src="img/products/bottles.svg" alt="bottles">
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
 
                     <div class="swiper-slide">
-                        <div class="products__item">
+                        <a href="#" class="products__item">
                             <div class="products__desc">
                                 <p class="products__par">light & dark roast</p>
                                 <h5 class="products__head">DARK ROAST BLEND</h5>
@@ -190,11 +190,11 @@
                                     <img src="img/products/bottles-red.svg" alt="bottles">
                                 </div>
                             </div>
-                        </div>
+                        </a>
 
                     </div>
                     <div class="swiper-slide">
-                        <div class="products__item">
+                        <a href="#" class="products__item">
                             <div class="products__desc">
                                 <p class="products__par">Snuggly for All Seasons</p>
                                 <h5 class="products__head">Logo beanie</h5>
@@ -202,11 +202,11 @@
                                     <img src="img/products/cap.webp" alt="cap">
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
 
                     <div class="swiper-slide">
-                        <div class="products__item">
+                        <a href="#" class="products__item">
                             <div class="products__desc">
                                 <p class="products__par">Sustainable carry-all</p>
                                 <h5 class="products__head">Stencil tote</h5>
@@ -214,11 +214,11 @@
                                     <img src="img/products/eco.webp" alt="eco">
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
 
                     <div class="swiper-slide">
-                        <div class="products__item">
+                        <a href="#" class="products__item">
                             <div class="products__desc">
                                 <p class="products__par">CLASSIC COMFY LOUNGEWEAR</p>
                                 <h5 class="products__head">SCRIPT SWEATSHIRT</h5>
@@ -226,11 +226,11 @@
                                     <img src="img/products/sweatshirt.webp" alt="sweatshirt">
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
 
                     <div class="swiper-slide">
-                        <div class="products__item">
+                        <a href="#" class="products__item">
                             <div class="products__desc">
                                 <p class="products__par">COCOA, MOLASSES, CINNAMON</p>
                                 <h5 class="products__head">SWEETER HOT SAUCE</h5>
@@ -238,10 +238,10 @@
                                     <img src="img/products/bottle-hand.webp" alt="bottle">
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
                     <div class="swiper-slide">
-                        <div class="products__item">
+                        <a href="#" class="products__item">
                             <div class="products__desc">
                                 <p class="products__par">SLEEK AND SUBTLE</p>
                                 <h5 class="products__head">TRAVEL MUG</h5>
@@ -249,7 +249,7 @@
                                     <img src="img/products/original.webp" alt="thermos">
                                 </div>
                             </div>
-                        </div>
+                        </a>
                     </div>
 
                 </div>
