--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
                     <img src="img/products/scorpion-right.svg" alt="scorpion">
                 </div>
             </div>
-            <!-- <div id="buttons-container">
+            <div id="buttons-container">
                 <div id="buttons">
                     <div id="yeah">
                         <div id="fire-container"></div>
                     </div>
                 </div>
-            </div> -->
+            </div>
 
 
             <!-- Slider main container -->
