added self-writing text

--- a/index.html
+++ b/index.html
@@ -318,7 +318,8 @@
             </div>
 
             <div class="about__desc">
-                <p class="about__par">HELLO, I’M LAUREN AND AS A LIFELONG ADVENTUROUS EATER, I’VE TRIED A LOT OF
+                <p class="about__par typing"></p>
+                <!-- <p class="about__par">HELLO, I’M LAUREN AND AS A LIFELONG ADVENTUROUS EATER, I’VE TRIED A LOT OF
                     CRAZY
                     THINGS, BUT I NEVER THOUGHT HOT SAUCE IN COFFEE WAS A SANE OPTION UNTIL A FRIEND DARED ME TO TRY
                     IT.
@@ -331,7 +332,7 @@
                     INDIA,
                     IS AN HOMAGE AND A LOVE LETTER TO MY DAD, AN INDIAN IMMIGRANT WHO INSTILLED A FIRE IN MY PALATE
                     –
-                    AND MY HEART – FROM THE VERY BEGINNING.</p>
+                    AND MY HEART – FROM THE VERY BEGINNING.</p> -->
             </div>
         </section>
     </main>
@@ -393,6 +394,7 @@
     <script src="js/loader.js"></script>
     <script src="js/hamburger.js"></script>
     <script src="js/fire.js"></script>
+    <script src="js/text.js"></script>
 </body>
 
 </html>
