changed path link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </ul>
             <div class="header__img">
                 <div class="header__circle header__circle-left"></div>
-                <a class="header__logo" href="index.html">
+                <a class="header__logo" href="/">
                     <img class="header__logo-img" src="img/logo/logo.svg" alt="logo" loading="lazy">
                 </a>
                 <div class="header__circle header__circle-right"></div>
