changed format img

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     </div>
                 </div>
                 <div class="content__right-img">
-                    <img src="img/content/sauce-3.webp" alt="sauce">
+                    <img src="img/content/sauce-3.svg" alt="sauce">
                 </div>
 
             </div>
