added img for github

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
 
             <ul class="header__menu header__menu-left">
                 <li><a class="header__menu-link" href="#.products">shop</a></li>
-                <li><a class="header__menu-link" href="https://www.faire.com/brand/b_whd3hnr378"
-                        target="_blank">wholesale</a></li>
+                <li><a class="header__menu-link" href="#">wholesale</a></li>
                 <li><a class="header__menu-link" href="#">stockists</a></li>
             </ul>
             <div class="header__img">
